Added useful property for pinned threads